tests/errors/test_58.xpp
// Function named the same as a constructor

fn IntBox() void {}

class IntBox {}

fn main() void{}
